// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a faulty image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a landscape image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a portrait image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with a square image.
  </p>,
]
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  color: #606770;
  font-size: 14px;
  line-height: 20px;
  word-break: break-word;
  max-height: 80px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: 3px;
  width: 100%;
}

<p
    className="c0"
  >
    Description to go along with too small an image.
  </p>,
]
`;
